--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 　　<head>
 　　　　<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 　　　　<title>{{ page.title }}</title>
-    <link rel="stylesheet" href="/css/base.css"/>
+    <link rel="stylesheet" href="http://wonderjolie.github.io/css/base.css"/>
 　　</head>
 　　<body>
 
