--- a/_layouts/index_layout.html
+++ b/_layouts/index_layout.html
@@ -6,15 +6,15 @@
 <meta name="description" content="" />
 <meta name="keywords" content="" />
 <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700|Open+Sans+Condensed:300,700" rel="stylesheet" />
-<script src="js/jquery.min.js"></script>
-<script src="js/config.js"></script>
-<script src="js/skel.min.js"></script>
-<script src="js/skel-panels.min.js"></script>
+<script src="http://wonderjolie.github.io/js/jquery.min.js"></script>
+<script src="http://wonderjolie.github.io/js/config.js"></script>
+<script src="http://wonderjolie.github.io/js/skel.min.js"></script>
+<script src="http://wonderjolie.github.io/js/skel-panels.min.js"></script>
 <noscript>
-<link rel="stylesheet" href="css/skel-noscript.css" />
-<link rel="stylesheet" href="css/style.css" />
-<link rel="stylesheet" href="css/style-desktop.css" />
-<link rel="stylesheet" href="css/style-wide.css" />
+<link rel="stylesheet" href="http://wonderjolie.github.io/css/skel-noscript.css" />
+<link rel="stylesheet" href="http://wonderjolie.github.io/css/style.css" />
+<link rel="stylesheet" href="http://wonderjolie.github.io/css/style-desktop.css" />
+<link rel="stylesheet" href="http://wonderjolie.github.io/css/style-wide.css" />
 </noscript>
 </head><body class="left-sidebar">
 <!-- Wrapper -->
