--- a/_layouts/index_layout.html
+++ b/_layouts/index_layout.html
@@ -29,7 +29,7 @@
   <div id="sidebar"> 
     <!-- Logo -->
     <div id="logo">
-      <h1>STRIPED</h1>
+      <h1>{{ page.title }}</h1>
     </div>
     <!-- Nav -->
     <nav id="nav">
