--- a/_layouts/index_layout.html
+++ b/_layouts/index_layout.html
@@ -22,7 +22,7 @@
   <!-- Content -->
   <div id="content">
     <div id="content-inner"> 
-	{{ content }} 
+	<!--{{ content }} -->
 	</div>
   </div>
   <!-- Sidebar -->
