--- a/_layouts/index_layout.html
+++ b/_layouts/index_layout.html
@@ -1,7 +1,10 @@
+---
+title: BLOG
+---　
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>{{ page.title }}</title>
+<title>BLOG</title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta name="description" content="" />
 <meta name="keywords" content="" />
@@ -22,14 +25,14 @@
   <!-- Content -->
   <div id="content">
     <div id="content-inner"> 
-	<!--{{ content }} -->
+	{{ content }}
 	</div>
   </div>
   <!-- Sidebar -->
   <div id="sidebar"> 
     <!-- Logo -->
     <div id="logo">
-      <h1>{{ page.title }}</h1>
+      <h1>BLOG</h1>
     </div>
     <!-- Nav -->
     <nav id="nav">
