--- a/_layouts/index_layout.html
+++ b/_layouts/index_layout.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html>
 <head>
 <title>BLOG</title>
@@ -21,9 +21,7 @@
 <div id="wrapper"> 
   <!-- Content -->
   <div id="content">
-    <div id="content-inner"> 
-	{{ content }}
-	</div>
+    <div id="content-inner">{{ content }}</div>
   </div>
   <!-- Sidebar -->
   <div id="sidebar"> 
