--- a/_layouts/post_layout.html
+++ b/_layouts/post_layout.html
@@ -1,149 +1,47 @@
-<!DOCTYPE HTML>
-<html>
-<head>
-<title>BLOG</title>
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<meta name="description" content="" />
-<meta name="keywords" content="" />
-<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700|Open+Sans+Condensed:300,700" rel="stylesheet" />
-<!--<link rel="stylesheet" href="{{ site.baseurl }}/css/blog_content.css" />-->
-<script src="{{ site.baseurl }}/js/jquery.min.js"></script>
-<script src="{{ site.baseurl }}/js/config.js"></script>
-<script src="{{ site.baseurl }}/js/skel.min.js"></script>
-<script src="{{ site.baseurl }}/js/skel-panels.min.js"></script>
-<noscript>
-<link rel="stylesheet" href="{{ site.baseurl }}/css/skel-noscript.css" />
-<link rel="stylesheet" href="{{ site.baseurl }}/css/style.css" />
-<link rel="stylesheet" href="{{ site.baseurl }}/css/style-desktop.css" />
-<link rel="stylesheet" href="{{ site.baseurl }}/css/style-wide.css" />
-</noscript>
-</head><body class="left-sidebar">
-<!-- Wrapper -->
-<div id="wrapper"> 
-  <!-- Content -->
-  <div id="content">
-    <div id="content-inner">{{ content }}</div>
-  </div>
-  <!-- Sidebar -->
-  <div id="sidebar"> 
-    <!-- Logo -->
-    <div id="logo">
-      <h1>BLOG</h1>
-    </div>
-    <!-- Nav -->
-    <nav id="nav">
-      <ul>
-        <li class="current_page_item"><a href="#">Latest Post</a></li>
-        <li><a href="#">Archives</a></li>
-        <li><a href="#">About Me</a></li>
-        <li><a href="#">Contact Me</a></li>
-      </ul>
-    </nav>
-    
-    <!-- Text -->
-    <section class="is-text-style1">
-      <div class="inner">
-        <p> <strong>Striped:</strong> A free and fully responsive HTML5 site
-          template designed by <a href="http://n33.co/">AJ</a> for <a href="http://html5up.net/">HTML5 up!</a> </p>
+<!DOCTYPE html>
+<html lang="en-us">
+
+  {% include post_head.html %}
+
+  <body>
+
+    {% include post_sidebar.html %}
+
+    <!-- Wrap is the content to shift when toggling the sidebar. We wrap the
+         content to avoid any CSS collisions with our real content. -->
+    <div class="wrap">
+      <div class="masthead">
+        <div class="container">
+          <h3 class="masthead-title">
+            <a href="{{ site.baseurl }}/" title="Home">WonderJolie</a>
+			<small>零件盒子</small>
+          </h3>
+        </div>
       </div>
-    </section>
-    
-    <!-- Recent Posts -->
-    <section class="is-recent-posts">
-      <header>
-        <h2>Recent Posts</h2>
-      </header>
-      <ul>
-        <li><a href="#">Nothing happened</a></li>
-        <li><a href="#">My Dearest Cthulhu</a></li>
-        <li><a href="#">The Meme Meme</a></li>
-        <li><a href="#">Now Full Cyborg</a></li>
-        <li><a href="#">Temporal Flux</a></li>
-      </ul>
-    </section>
-    
-    <!-- Recent Comments -->
-    <section class="is-recent-comments">
-      <header>
-        <h2>Recent Comments</h2>
-      </header>
-      <ul>
-        <li>case on <a href="#">Now Full Cyborg</a></li>
-        <li>molly on <a href="#">Untitled Post</a></li>
-        <li>case on <a href="#">Temporal Flux</a></li>
-      </ul>
-    </section>
-    
-    <!-- Calendar -->
-    <section class="is-calendar">
-      <div class="inner">
-        <table>
-          <caption>
-          February 2013
-          </caption>
-          <thead>
-            <tr>
-              <th scope="col" title="Monday">M</th>
-              <th scope="col" title="Tuesday">T</th>
-              <th scope="col" title="Wednesday">W</th>
-              <th scope="col" title="Thursday">T</th>
-              <th scope="col" title="Friday">F</th>
-              <th scope="col" title="Saturday">S</th>
-              <th scope="col" title="Sunday">S</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td colspan="4" class="pad"><span>&nbsp;</span></td>
-              <td><span>1</span></td>
-              <td><span>2</span></td>
-              <td><span>3</span></td>
-            </tr>
-            <tr>
-              <td><span>4</span></td>
-              <td><span>5</span></td>
-              <td><a href="#">6</a></td>
-              <td><span>7</span></td>
-              <td><span>8</span></td>
-              <td><span>9</span></td>
-              <td><a href="#">10</a></td>
-            </tr>
-            <tr>
-              <td><span>11</span></td>
-              <td><span>12</span></td>
-              <td><span>13</span></td>
-              <td class="today"><a href="#">14</a></td>
-              <td><span>15</span></td>
-              <td><span>16</span></td>
-              <td><span>17</span></td>
-            </tr>
-            <tr>
-              <td><span>18</span></td>
-              <td><span>19</span></td>
-              <td><span>20</span></td>
-              <td><span>21</span></td>
-              <td><span>22</span></td>
-              <td><a href="#">23</a></td>
-              <td><span>24</span></td>
-            </tr>
-            <tr>
-              <td><a href="#">25</a></td>
-              <td><span>26</span></td>
-              <td><span>27</span></td>
-              <td><span>28</span></td>
-              <td class="pad" colspan="3"><span>&nbsp;</span></td>
-            </tr>
-          </tbody>
-        </table>
+
+      <div class="container content">
+        {{ content }}
       </div>
-    </section>
-    
-    <!-- Copyright -->
-    <div id="copyright">
-      <p> &copy; 2013 An Untitled Site.<br />
-        Images: <a href="http://n33.co">n33</a>, <a href="http://fotogrph.com">fotogrph</a>, <a href="http://iconify.it">Iconify.it</a> Design: <a href="http://html5up.net/">HTML5 UP</a> </p>
     </div>
-  </div>
-</div>
-</body>
+
+    <label for="sidebar-checkbox" class="sidebar-toggle"></label>
+
+    <script>
+      (function(document) {
+        var toggle = document.querySelector('.sidebar-toggle');
+        var sidebar = document.querySelector('#sidebar');
+        var checkbox = document.querySelector('#sidebar-checkbox');
+
+        document.addEventListener('click', function(e) {
+          var target = e.target;
+
+          if(!checkbox.checked ||
+             sidebar.contains(target) ||
+             (target === checkbox || target === toggle)) return;
+
+          checkbox.checked = false;
+        }, false);
+      })(document);
+    </script>
+  </body>
 </html>
