--- a/_layouts/post_layout.html
+++ b/_layouts/post_layout.html
@@ -14,7 +14,7 @@
         <div class="container">
           <h3 class="masthead-title">
             <a href="{{ site.baseurl }}/" title="Home">WonderJolie</a>
-			<small>零件盒子</small>
+			<small></small>
           </h3>
         </div>
       </div>
